--- a/consumindo-api-no-front-end-com-axios/index.html
+++ b/consumindo-api-no-front-end-com-axios/index.html
@@ -11,7 +11,18 @@
 
   </div>
 
+  <h2>Lista de Usuários</h2>
   <button onclick="getUsers()">Lista usuarios</button>
+
+  <h2>Cadastra usuario</h2>
+  <!-- http://localhost:5501/api/ -->
+  <form action="http://localhost:5501/api/" method="post" id="formAddUser">
+    <input name="name" id="inputName" type="text" placeholder="Nome">
+    <input name="avatar" id="inputAvatar" type="text" value="https://picsum.photos/460/460" disabled>
+    <input name="city" id="inputCity" type="text" placeholder="City">
+
+    <button type="submit">Cadastro de usuário</button>
+  </form>
 
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
