--- a/consumindo-api-no-front-end-com-axios/index.html
+++ b/consumindo-api-no-front-end-com-axios/index.html
@@ -3,16 +3,36 @@
 
 <head>
   <title>Consumindo API com Axios</title>
+  <style>
+    .borderDiv {
+      border: 1px solid black;
+      width: 200px;
+      margin: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .errorMessage {
+      color: red;
+      font-weight: bold;
+    }
+  </style>
 </head>
 
 <body>
 
+  <h2>Lista de Usuários</h2>
   <div id="renderApp">
 
   </div>
-
-  <h2>Lista de Usuários</h2>
   <button onclick="getUsers()">Lista usuarios</button>
+
+  <h2>Lista Usuário especifico</h2>
+  <input type="text" placeholder="busca usuario" id="userID">
+  <button onclick="getUser()">Pesquisar usuario</button>
+  <div id="renderUsuario">
+  </div>
 
   <h2>Cadastra usuario</h2>
   <!-- http://localhost:5501/api/ -->
