--- a/consumindo-api-no-front-end-com-axios/index.html
+++ b/consumindo-api-no-front-end-com-axios/index.html
@@ -4,6 +4,10 @@
 <head>
   <title>Consumindo API com Axios</title>
   <style>
+    #renderApp {
+      display: flex;
+    }
+
     .borderDiv {
       border: 1px solid black;
       width: 200px;
@@ -15,6 +19,11 @@
 
     .errorMessage {
       color: red;
+      font-weight: bold;
+    }
+
+    .successMessage {
+      color: green;
       font-weight: bold;
     }
   </style>
@@ -43,6 +52,17 @@
 
     <button type="submit">Cadastro de usuário</button>
   </form>
+
+  <h2>Atualizar usuario</h2>
+  <form action="http://localhost:5501/api/" method="PUT" id="formUpdateUser">
+    <input name="id" id="inputId" type="text" placeholder="Id">
+    <input name="name" id="inputName" type="text" placeholder="Nome">
+    <input name="avatar" id="inputAvatar" type="text" value="https://picsum.photos/460/460" disabled>
+    <input name="city" id="inputCity" type="text" placeholder="City">
+
+    <button id="attUser" type="submit">Atualizar usuário</button>
+  </form>
+  <div id="updateMessage"></div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
